<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/px_16"
    android:elevation="@dimen/px_16"
    android:layout_marginTop="@dimen/px_16"
    android:layout_marginLeft="@dimen/px_16"
    android:layout_marginRight="@dimen/px_16">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_10"
            android:layout_marginLeft="@dimen/px_30">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_text_size"
                android:text="@string/car_name"/>
            <TextView
                android:id="@+id/tv_car_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px_30"
                android:textSize="@dimen/content_text_size"
                android:text="粤B:888888"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_10"
            android:layout_marginLeft="@dimen/px_30">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_text_size"
                android:text="@string/car_desc"/>
            <TextView
                android:id="@+id/tv_car_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px_30"
                android:textSize="@dimen/content_text_size"
                android:text="奥迪 A8"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_10"
            android:layout_marginLeft="@dimen/px_30"
            android:layout_marginBottom="@dimen/px_10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_department"
                android:textSize="@dimen/content_text_size"/>
            <TextView
                android:id="@+id/tv_car_depatment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px_30"
                android:textSize="@dimen/content_text_size"
                android:text="部门A"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_1"
            android:background="@color/gray_line"/>

        <RelativeLayout
            android:layout_marginTop="@dimen/px_6"
            android:layout_marginBottom="@dimen/px_6"
            android:layout_marginRight="@dimen/px_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_car_detail"
                android:layout_width="@dimen/px_80"
                android:layout_height="@dimen/px_80"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_car_detail"/>
            <ImageView
                android:id="@+id/iv_edit_car"
                android:layout_width="@dimen/px_80"
                android:layout_height="@dimen/px_80"
                android:layout_marginRight="@dimen/px_10"
                android:layout_toLeftOf="@id/iv_car_detail"
                android:src="@drawable/ic_edit_car"/>
            <ImageView
                android:id="@+id/iv_device"
                android:layout_width="@dimen/px_80"
                android:layout_height="@dimen/px_80"
                android:layout_toLeftOf="@id/iv_edit_car"
                android:layout_marginRight="@dimen/px_10"
                android:src="@drawable/ic_device"/>
        </RelativeLayout>

        <View
            android:id="@+id/v_vertal_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_1"
            android:background="@color/gray_line"/>

        <LinearLayout
            android:id="@+id/ll_bind_device"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_10"
            android:layout_marginBottom="@dimen/px_10"
            android:gravity="center">
            <ImageView
                android:layout_width="@dimen/px_50"
                android:layout_height="@dimen/px_50"
                android:src="@drawable/ic_warmming"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/no_bind_device"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>